deployments/k8s/resources/mailhog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog
          ports:
            - containerPort: 1025
            - containerPort: 8025
