deployments/k8s/resources/mailhog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog
spec:
  type: ClusterIP
  selector:
    app: mailhog
  ports:
    - name: smtp
      port: 1025
      targetPort: 1025
    - name: ui
      port: 80
      targetPort: 8025
